...

      <Tab.Screen
        name="Orders"
        options={{
          title: '积分订单',
          tabBarIcon: ({ color }) => <Clipboard size={24} color={color} />,
          tabBarButtonTestID: 'tab-orders',
        }}
        component={BranchGMOrdersScreen}
      />

      <Tab.Screen
        name="Ranking"
...
