...
      <Tab.Screen
        name="Scan"
        options={{
          title: '扫码',
          tabBarIcon: ({ focused }) => <ScanTabIcon focused={focused} />,
          tabBarLabelStyle: { fontSize: 11, fontWeight: '700', color: Colors.primary, marginTop: 2 },
          tabBarButtonTestID: 'tab-scan',
        }}
        component={ScanScreen}
      />

      <Tab.Screen
        name="Ranking"
...
